@@ -16,6 +16,7 @@
 *       -------------------------------------------------------------
 */
 
+#include "deskconf.h"
 #include "desk_rsc.h"           /* for RS_NTREE */
 
 
@@ -25,7 +26,6 @@
 #define HRGLASS 0x2
 
 
-#define MAX_OBS 60
 #define MAX_LEVEL 8
 
 #define GLOBES struct glnode
